<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">what, what!</string>
    <string name="app_name">Math-o-Defender</string>
    <string name="debug_waves_left">Waves left:</string>
    
    
    <string name="app_name_alt">My horse is amazing.</string>
    <string name="textview_title">Math Defendor</string>
    <string name="textview_highscorestitle">Highscores</string> 
    <string name="button_zenstart">Zen Mode</string>
    <string name="button_supermarketstart">Supermarket Mode</string>
    <string name="button_highscores">Highscores</string>
    <string name="button_tutorialstart">Tutorial</string> 
        <string name="button_continue">continue</string> 
    
    <string name="loremipsum1">Lorem ipsum</string>
    <string name="loremipsum2">dolor sit amet</string> 
    <string name="points1">5230</string>
    <string name="points2">2344</string>
    <string name="zen">Zen Mode</string>
    <string name="supermarket">Supermarket Mode</string>
    <string name="loremipsumlong1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nunc lectus, egestas et ultrices eu, vehicula vel lorem. Suspendisse in enim at nulla tempus sagittis ut suscipit tellus. Maecenas dignissim felis augue. Integer varius, sapien quis aliquam tincidunt, enim tellus imperdiet dolor, et sagittis odio lorem hendrerit quam. Morbi scelerisque vulputate eleifend. Morbi tincidunt bibendum imperdiet. Integer nec mauris nisi. Suspendisse in nisi elit. Nam imperdiet, nunc quis imperdiet venenatis, massa libero posuere sapien, vel vulputate ipsum diam vel mauris. Aenean viverra, metus blandit faucibus euismod, justo augue porta libero, ac ultrices ipsum arcu eu augue. Donec posuere hendrerit facilisis. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc facilisis diam vitae dolor pulvinar et malesuada eros rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </string>
    <string name="loremipsumlong2">Curabitur laoreet interdum metus, vel iaculis dui egestas vel. Proin tempus nunc eu lectus pharetra viverra. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean non quam arcu, sed auctor risus. Sed vel suscipit urna. Suspendisse quis dolor vitae nunc suscipit accumsan id quis ipsum. Curabitur erat nisi, luctus at lacinia dignissim, porta vulputate leo. </string>
    <string name="supermarket_instructions">Train your abbility to assess and compare sums.\nYou are in a supermarket and start with a budget of 50€ (?).\n To survive, always choose the shopping cart with the lowest price.\nIf you choose a shopping cart that is above your budget, you lose one of your lives and can start the level again.\nIf you have money left after passing the last wave of shopping carts, this will be added to your budget in the next level.\nIf you collect more shopping carts than waves you can choose from several bonuses to use in the next level.\n Good luck with your shopping tour!</string> 
	<string name="zen_instructions">Train your Math Skills!\n Could somebody fill in the rules? Im not sure about them anymore!\n</string>
</resources>
