<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_title"
            android:textColor="#000000"
            android:textSize="20pt"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_gamestart"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/button_gamestart" />

        <Button
            android:id="@+id/button_tutorialstart"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/button_tutorialstart" />

        <Button
            android:id="@+id/button_highscores"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/button_highscores" />
    </LinearLayout>

</LinearLayout>